# magiceden_python

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/magiceden_python/: __init__.py
tests/: __init__.py  test_magiceden_python.py
